Add support for OpenAPI deep object decoding
